--- a/src/app/protected/manage/manage-users/user-list/user-list.component.html
+++ b/src/app/protected/manage/manage-users/user-list/user-list.component.html
@@ -16,7 +16,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let u of users | async ; let i=index">
+        <tr *ngFor="let u of users | async ; let i=index" (click)="bindUser(i)">
           <td>{{ u.firstName }}</td>
           <td>{{ u.lastName }}</td>
           <td>{{ u.mail }}</td>
