--- a/src/app/protected/manage/manage-vehicles/vehicle-list/vehicle-list.component.html
+++ b/src/app/protected/manage/manage-vehicles/vehicle-list/vehicle-list.component.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let v of vehicles | async; let i=index">
+        <tr *ngFor="let v of vehicles; let i=index" (click)="bindVehicle(i)">
           <td>{{ v.model }}</td>
           <td>{{ v.brand }}</td>
           <td>{{ v.type }}</td>
