--- a/src/app/protected/manage/manage.component.html
+++ b/src/app/protected/manage/manage.component.html
@@ -9,11 +9,11 @@
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-warehouse"></i>&nbsp;Gestion Locations</a>
           <a [routerLinkActive]="['active']"
-            [routerLink]="'utilisateurfeature'"
+            [routerLink]="'utilisateurs'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-users-cog"></i>&nbsp;Gestion Utilisateurs</a>
           <a [routerLinkActive]="['active']"
-            [routerLink]="'vehiculefeature'"
+            [routerLink]="'vehicules'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-car"></i>&nbsp;Gestion Véhicules</a>
         </div>
