delete feature-card and create rentalList component

--- a/src/app/protected/manage/manage-users/user-details/user-details.component.html
+++ b/src/app/protected/manage/manage-users/user-details/user-details.component.html
@@ -107,6 +107,6 @@
   </div>
   <div class="card-footer text-center">
     <button type="submit" class="btn btn-info btn-sm mr-2">
-        <span class="far fa-edit fa-lg"></span>&nbsp; Mettre à jour la fiche du véhicule</button>
+        <span class="far fa-edit fa-lg"></span>&nbsp; Mettre à jour la fiche de l'utililsateur</button>
   </div>
 </div>
