--- a/src/app/protected/manage/manage-rentals/rental-list/rental-list.component.scss
+++ b/src/app/protected/manage/manage-rentals/rental-list/rental-list.component.scss
@@ -1,15 +1,19 @@
 .table th, .table td {
     vertical-align: inherit;
   }
-  
+
   .table td {
     padding: 0.30rem;
   }
-  
+
   .table {
     margin-bottom: inherit;
   }
-  
+
   .btnRounded {
     border-radius: 30%;
+  }
+
+  tr:hover {
+    cursor: pointer;
   }
