--- a/src/app/protected/manage/manage-users/user-details/user-details.component.html
+++ b/src/app/protected/manage/manage-users/user-details/user-details.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<form #UserUpdateForm="ngForm" (ngSubmit)="updateUser(userUpdateForm.value)">
+  <div class="card">
   <div class="card-header bg-info text-white">Détails de l'utilisateur</div>
-  <form #UserUpdateForm="ngForm" (ngSubmit)="updateUser(userUpdateForm.value)"></form>
   <div class="card-body">
       <div class="row text-center">
         <div class="col-12"><h5>Dénomination</h5></div>
@@ -18,10 +18,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-5"><label class="control-label" for="birthDate"><u>Date de naissance</u> :</label></div>
+        <div class="col-5"><label class="control-label" for="birthDay"><u>Date de naissance</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.birthDate | date:'shortDate':'+0200':'fr'" type="text" id="user.birthDate" name="user.birthDate" [ngModel]="user.birthDate" required>
-        </div>
+            <input #dp="bsDatepicker" bsDatepicker [bsConfig]="{ adaptivePosition: true, isAnimated: true, dateInputFormat: 'DD/MM/YYYY' }"
+            [bsValue]="user.birthDay"  id="vuser.birthDay" name="user.birthDay" [ngModel]="user.birthDay | date:'shortDate':'+0200':'fr'" required>        </div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="phone"><u>N° de téléphone</u> :</label></div>
@@ -46,45 +46,39 @@
             <input [value]="user.mail" type="email" id="user.mail" name="user.mail" [ngModel]="user.mail" required>
         </div>
       </div>
-      <div class="row">
-        <div class="col-5"><label class="control-label" for="password"><u>Mot de passe</u> :</label></div>
-        <div class="col-7">
-            <input [value]="user.password" type="email" id="user.password" name="user.password" [ngModel]="user.password" required>
-        </div>
-      </div>
       <hr>
       <div class="row text-center">
         <div class="col-12">
-          <h5>Adresse</h5></div>
+          <h5>Addresse</h5></div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="number"><u>Numéro</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.adress.number" type="text" id="user.adress.number" name="user.adress.number" [ngModel]="user.adress.number" required>
+            <input [value]="user.address.number" type="text" id="user.address.number" name="user.address.number" [ngModel]="user.address.number" required>
         </div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="street"><u>Rue</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.adress.street" type="text" id="user.adress.street" name="user.adress.street" [ngModel]="user.adress.street" required>
+            <input [value]="user.address.street" type="text" id="user.address.street" name="user.address.street" [ngModel]="user.address.street" required>
         </div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="city"><u>Ville</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.adress.city" type="text" id="user.adress.city" name="user.adress.city" [ngModel]="user.adress.city" required>
+            <input [value]="user.address.city" type="text" id="user.address.city" name="user.address.city" [ngModel]="user.address.city" required>
         </div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="city"><u>state</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.adress.state" type="text" id="user.adress.state" name="user.adress.state" [ngModel]="user.adress.state" required>
+            <input [value]="user.address.state" type="text" id="user.address.state" name="user.address.state" [ngModel]="user.address.state" required>
         </div>
       </div>
       <div class="row">
         <div class="col-5"><label class="control-label" for="country"><u>Pays</u> :</label></div>
         <div class="col-7">
-            <input [value]="user.adress.country" type="text" id="user.adress.country" name="user.adress.country" [ngModel]="user.adress.country" required>
+            <input [value]="user.address.country" type="text" id="user.address.country" name="user.address.country" [ngModel]="user.address.country" required>
         </div>
       </div>
       <hr>
@@ -95,13 +89,15 @@
       <div class="row">
         <div class="col-6"><label class="control-label" for="creationDate"><u>Date de création</u> :</label></div>
         <div class="col-6">
-            <input [value]="user.creationDate | date:'shortDate':'+0200':'fr'" type="text" id="user.creationDate" name="user.creationDate" [ngModel]="user.creationDate" required>
+            <input [value]="user.creationDate" type="text" id="user.creationDate" name="user.creationDate"
+            [ngModel]="user.creationDate | date:'shortDate':'+0200':'fr'" required readonly style="width:95%">
         </div>
       </div>
       <div class="row">
         <div class="col-6"><label class="control-label" for="modificationDate"><u>Date de modification</u> :</label></div>
         <div class="col-6">
-            <input [value]="user.modificationDate | date:'shortDate':'+0200':'fr'" type="text" id="user.modificationDate" name="user.modificationDate" [ngModel]="user.modificationDate" required>
+            <input [value]="user.modificationDate" type="text" id="user.modificationDate" name="user.modificationDate"
+            [ngModel]="user.modificationDate  | date:'shortDate':'+0200':'fr'" required readonly style="width:95%">
         </div>
       </div>
   </div>
@@ -109,4 +105,5 @@
     <button type="submit" class="btn btn-info btn-sm mr-2">
         <span class="far fa-edit fa-lg"></span>&nbsp; Mettre à jour la fiche de l'utililsateur</button>
   </div>
-</div>
+  </div>
+</form>
