--- a/src/app/protected/manage/manage.component.html
+++ b/src/app/protected/manage/manage.component.html
@@ -5,7 +5,7 @@
         <h4 class="bd-title px-4 mb-5">Accès Admin</h4>
         <div class="list-group list-group-flush">
           <a [routerLinkActive]="['active']"
-            [routerLink]="'locationfeature'"
+            [routerLink]="'locations'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-warehouse"></i>&nbsp;Gestion Locations</a>
           <a [routerLinkActive]="['active']"
