--- a/src/app/protected/manage/manage-rentals/rental-details/rental-details.component.html
+++ b/src/app/protected/manage/manage-rentals/rental-details/rental-details.component.html
@@ -21,8 +21,8 @@
         <div class="col-7">{{rental.endTime}}</div>
       </div>
       <div class="row">
-        <div class="col-5"><label class="control-label" for="state"><u>Etat</u> :</label></div>
-        <div class="col-7">{{rental.state}}</div>
+        <div class="col-5"><label class="control-label" for="status"><u>Status</u> :</label></div>
+        <div class="col-7">{{rental.status}}</div>
       </div>
       <hr>
       <div class="row text-center">
@@ -44,8 +44,35 @@
       </div>
   </div>
   <div class="card-footer text-center">
-    <button type="button" class="btn btn-info btn-sm mr-2">
-       Mettre à jour le status de la location
+    <button type="button" class="btn btn-info btn-sm mr-2" (click)="openModal(template)">
+        <span class="far fa-edit fa-lg"></span>&nbsp; Mettre à jour le status de la location
     </button>
   </div>
 </div>
+<ng-template #template>
+    <div class="modal-header bg-info text-white">
+      <h4 class="modal-title pull-left">Mise à jour du status de la location</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <form #updateStatusForm="ngForm" (ngSubmit)="updateStatus(updateStatusForm.value)">
+      <div class="modal-body text-center">
+          <div class="row">
+              <div class="col-6"><label class="control-label" for="status"><u>Status</u> :</label></div>
+              <div class="col-6">
+                <select class="text-center" [value]="rental.status" type="text" id="status" name="status" [ngModel]="rental.status" required style="width:100%;padding:inherit;">
+                  <option>CANCELED</option>
+                  <option>DONE</option>
+                  <option>IN_PROGRESS</option>
+                </select>
+              </div>
+          </div>
+        </div>
+        <div class="card-footer text-center">
+            <button type="submit" class="btn btn-success btn-sm mr-2">
+                <span class="fa fa-check" aria-hidden="true"></span>&nbsp; Valider
+            </button>
+        </div>
+    </form>
+  </ng-template>
