--- a/src/app/protected/manage/manage-users/manage-user-add/user-add/user-add.component.html
+++ b/src/app/protected/manage/manage-users/manage-user-add/user-add/user-add.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <h5 class="card-header text-center">Inscription</h5>
     <div class="card-body">
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="addUserForm" (ngSubmit)="adduser(addUserForm.value)">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail">Email</label>
